@@ -1,8 +1,5 @@
 package vadl.test.lcb.sys.riscv;
 
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.assertj.core.api.AssertionsForClassTypes.contentOf;
-
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
@@ -14,7 +11,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.DynamicTest;
-import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestFactory;
 import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 import org.testcontainers.images.builder.ImageFromDockerfile;
@@ -61,28 +57,13 @@ public class SpikeRiscv64SimulationTest extends AbstractLcbTest {
         .withBuildArg("UPSTREAM_CLANG_TARGET", upstreamClangTarget)
         .withBuildArg("SPIKE_TARGET", "rv64gc"));
 
-    // We build the image and copy all the input files into the container.
-    // The llvm compiler compiles all assembly files, and we copy them from the container
-    // to the host (hostOutput folder).
-    var hostOutput = configuration.outputPath() + "/output/";
-
-    runContainerAndCopyInputIntoAndCopyOutputFromContainer(image,
-        Path.of("../../open-vadl/vadl-test/main/resources/llvm/riscv/spike"),
-        "/src/inputs",
-        Path.of(hostOutput),
-        "/output");
-
     // The container is complete and has generated the assembly files.
     return inputFilesFromCFile().map(input -> DynamicTest.dynamicTest(input, () -> {
-      var name = Paths.get(input).getFileName();
-      var errorPath = hostOutput + name + ".err";
-      var errorFile = new File(errorPath);
-
-      // First check if an error file exists. Note that the container always
-      // creates an error file, so we also check for the size.
-      if (errorFile.exists() && errorFile.length() != 0) {
-        assertThat(contentOf(errorFile)).isEqualToIgnoringWhitespace("");
-      }
+      runContainerWithEnv(image,
+          Path.of("../../open-vadl/vadl-test/main/resources/llvm/riscv/spike"),
+          "/src/inputs",
+          "INPUT",
+          input);
     })).toList();
   }
 }
